Dodano formularz rejestracji i informacji o koncie

--- a/MeetYourLove/WebContent/register.xhtml
+++ b/MeetYourLove/WebContent/register.xhtml
@@ -10,12 +10,16 @@
 	<ui:define name="content">
 	     <h:form>
             <h:panelGrid columns="2">
-                <h:outputText value="Name"></h:outputText>
-                <h:inputText value="#{loginBean.name}"></h:inputText>
+            	<h:outputText value="Login"></h:outputText>
+                <h:inputText value=""></h:inputText>
+                <h:outputText value="E-mail"></h:outputText>
+                <h:inputText value=""></h:inputText>
                 <h:outputText value="Password"></h:outputText>
-                <h:inputSecret value="#{loginBean.password}"></h:inputSecret>
+                <h:inputSecret value=""></h:inputSecret>
+                <h:outputText value=" Retype your password"></h:outputText>
+                <h:inputSecret value=""></h:inputSecret>
             </h:panelGrid>
-            <h:commandButton value="Login" action="login"></h:commandButton>
+            <h:commandButton value="Register" action="register"></h:commandButton>
         </h:form>
 	</ui:define>
 </ui:composition>
